* Dialer (ECCP): fixed a 200-byte-per-request memory leak on XML response ID 
  assignment.
* Dialer (ECCP): implement "getcampaignstatus" request
* Dialer (ECCP): implement "transfercall" request
* Dialer: write true outgoing channel, not Local@from-internal, to current_calls
  table. Also reuse stored channel at hold time instead of querying the channel
  again from Asterisk. May fix Elastix bug #796.
* Dialer: remove use of deprecated ereg* functions from Predictivo.class.php
* Dialer: fixed regular expression for parsing of 'agent show' report that 
  missed DAHDI channels (and possibly other custom channels).
* Dialer: fix accounting of parked calls (for Hold) in incoming-calls case

1.5-4.1 (SVN revision 2847)
* Dialer (ECCP): Added "extension" and "channel" fields to response for 
  "getagentstatus" request.
* Agent Console: display error diagnostic messages when pause/unpause fails. 
  Also display attempted hangup channel when Hangup operation failed.
* Agents, Break Administrator, Campaigns Out: undo use of <button> inside of <a>
  as this combination does not work as intended in Firefox 4.0.1. Fixes Elastix
  bug #864.
* Agents: implement setting and changing optional ECCP password for agent
* Agents: remove hardcoded HTML escapings in Spanish translation
* Agent Console: When attempting to hang an incoming call, do not expose SQL on
  empty recordset. Fixes Elastix bug #841.
* Agent Console: Remove reference to nonexistent javascript ManejadorCierre()

1.5-4.0 (SVN revision 2550)
* Agent Console: When programming a call, the shadow call should inherit 
  all call attributes from the original call. Merge fix from Elastix forums.
* Dialer (ECCP): Alpha-level support for Elastix Call Center Protocol
* Agent Console: When programming calls, do not send campaign ID, phone number,
  and client name through the URL. Instead, just send the call ID and read the
  other values from the database. This sidesteps character escaping issues.